package behavioral.strategy.cc2;

public interface ISoSanh<T> {
    int soSanh(T o1, T o2);

}
