@startuml
'https://plantuml.com/class-diagram

interface ISoSanh<T>{
    + int soSanh(T o1, T o2)
}
class SinhVien{
    - String ten
    - Date ngaySinh
    - float diemTB
    + String getTen()
    + String getDiemTB()
    + String toString()
}
class QLSV{
    - List<SinhVien> dsSV
    - ISoSanh <SinhVien> soSanh
    + void setSoSanh(ISoSanh<SinhVien> soSanh)
    + void SapXep()
    + void inDS()
    + void themSV()
}
class SoSanhTheoTen{
    + int soSanh(SinhVien o1, SinhVien o2)
}
class SoSanhTheoDiem{
    + int soSanh(SinhVien o1, SinhVien o2)
}

ISoSanh <|.. SoSanhTheoDiem
ISoSanh <|.. SoSanhTheoTen
QLSV o-> ISoSanh: soSanh
QLSV --> SinhVien: dsSV
SoSanhTheoTen ..> SinhVien
SoSanhTheoDiem ..> SinhVien


@enduml